--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1> first </h1>
-    <h3> look mama i can push to github</h3>
-</body>
+    <p> Feeling happy now </p>
+    <p>I am a ghost</p>
+    </body>
 </html>
